# makisama_backend

./: .gitignore  Cargo.toml  README.md  notes_endpoints.txt  notes_general.txt  notes_models.txt
docs/models/: Models.xlsx
migrations/: 20250712203009_user_model.up.sql  20250712203952_add_user_auth_token.down.sql  20250712203952_add_user_auth_token.up.sql  20250713163642_initial_tables.down.sql  20250713163642_initial_tables.up.sql  20250713172418_remove_username.down.sql  20250713172418_remove_username.up.sql  20250716184449_add_blacklist_token_table.down.sql  20250716184449_add_blacklist_token_table.up.sql  20250716191031_add_blacklisted_token_table.down.sql  20250716191031_add_blacklisted_token_table.up.sql  20250721163251_add_revoked_token_table.down.sql  20250721163251_add_revoked_token_table.up.sql  20250728192837_add_board_table.down.sql  20250728192837_add_board_table.up.sql  20250730195124_add_board_tables.down.sql  20250730195124_add_board_tables.up.sql  20251007172344_add_organisation_tables.down.sql  20251007172344_add_organisation_tables.up.sql  20251209142929_add_revoked_tables.up.sql
src/: constants.rs  main.rs
src/dtos/: login_dto.rs  register_dto.rs
src/handlers/: auth_handlers.rs  authentication.rs  mod.rs
src/middlewares/: jwt_auth_middleware.rs  mod.rs
src/models/: auth_identity_model.rs  blacklist_token_model.rs  board_description_model.rs  board_member_model.rs  board_model.rs  board_name_model.rs  board_pid_model.rs  board_user_model.rs  firstname_model.rs  lastname_model.rs  mod.rs  organisation_model.rs  organisation_pid_model.rs  (+7 more)
(+47 files in other folders)
