[package]
name = "makisama_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "mysql",
    "macros",
    "chrono",
] }
bcrypt = "0.17"
dotenvy = "0.15"
chrono = { version = "0.4.41", features = ["serde"] }
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v4"] }
jsonwebtoken = "9"
futures-util = "0.3"
email_address = "0.2.9"
regex = "1.11.1"
validator = { version = "0.20.0", features = ["derive"] }
actix-cors = "0.7.1"
rand = "0.9.2"
